<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/incomeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_attach_money_24"
        android:title="@string/income"/>
    <item
        android:id="@+id/expenseFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_money_off_24"
        android:title="@string/expense"/>
    <item
        android:id="@+id/budgetFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_checklist_24"
        android:title="@string/budget"/>
    <item
        android:id="@+id/settingsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"/>
</menu>